// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCounter component renders correctly when number of characters is over 3 digits 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "column",
        "height": 22,
        "justifyContent": "center",
        "marginLeft": 11,
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "flexDirection": "column",
          "height": 22,
          "justifyContent": "center",
          "paddingHorizontal": 5,
        },
        Object {
          "backgroundColor": "#FFFFFF46",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 10,
          },
          Object {
            "color": "#FF0000",
          },
        ]
      }
    >
      +999/10
    </Text>
  </View>
</View>
`;

exports[`CharacterCounter component renders correctly when number of characters is over limit 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "column",
        "height": 22,
        "justifyContent": "center",
        "marginLeft": 11,
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "flexDirection": "column",
          "height": 22,
          "justifyContent": "center",
          "paddingHorizontal": 5,
        },
        Object {
          "backgroundColor": "#FFFFFF46",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 10,
          },
          Object {
            "color": "#FF0000",
          },
        ]
      }
    >
      11/10
    </Text>
  </View>
</View>
`;

exports[`CharacterCounter component renders correctly when number of characters is within limit 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "column",
        "height": 22,
        "justifyContent": "center",
        "marginLeft": 11,
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "flexDirection": "column",
          "height": 22,
          "justifyContent": "center",
          "paddingHorizontal": 5,
        },
        Object {
          "backgroundColor": "#FFFFFF46",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 10,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      1/10
    </Text>
  </View>
</View>
`;
